--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "test": "eslint --ext .tsx --ext .ts src/"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.18.0"
+    "react-redux": "^8.1.3",
+    "react-router-dom": "6.18.0",
+    "vite-plugin-svgr": "^4.1.0"
   },
   "devDependencies": {
     "@types/prettier": "3.0.0",
